[package]
name = "consecuit"
version = "0.1.0"
authors = ["Wisha Wa <wisha.wa@yandex.com>"]
edition = "2018"
license = "LGPL-2.1"

description = "A functional web UI framework that uses the type system for hooks and more"
readme = "README.md"
documentation = "https://docs.rs/consecuit"

repository = "https://github.com/wishawa/consecuit"
keywords = ["webassembly", "gui", "functional"]
categories = ["WebAssembly"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sealed = "0.3.0"
wasm-bindgen = "0.2.74"
im-rc = "15.0.0"
consecuit_macros = { path = "./macros/", version = "^0.1.0" }

[dependencies.js-sys]
version = "0.3.51"

[dependencies.web-sys]
version = "0.3.51"
features = [
	'Document',
	'DocumentFragment',
	'Element',
	'Window',
	'HtmlElement',
	'Node',
	'NodeList',
	'CssStyleDeclaration',
	'console',
]

[workspace]
members = [
	"html/",
	"macros/",
	"examples/counters/",
	"examples/todomvc"
]