[package]
name = "consecuit_html"
version = "0.1.0"
authors = ["Wisha Wa <wisha.wa@yandex.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sealed = "0.3.0"
wasm-bindgen = "0.2.74"
im-rc = "15.0.0"
consecuit = { path = "../", version = "0.1.0" }

[dependencies.js-sys]
version = "0.3.51"

[dependencies.web-sys]
version = "0.3.51"
features = [
	'Document',
	'Element',
	'DomTokenList',
	'Window',
	'Node',
	'Text',
	'HtmlElement',
	'HtmlAnchorElement',
	'HtmlAreaElement',
	'HtmlAudioElement',
	'HtmlBaseElement',
	'HtmlBodyElement',
	'HtmlBrElement',
	'HtmlButtonElement',
	'HtmlCanvasElement',
	'HtmlDListElement',
	'HtmlDataElement',
	'HtmlDataListElement',
	'HtmlDetailsElement',
	'HtmlDialogElement',
	'HtmlDirectoryElement',
	'HtmlDivElement',
	'HtmlEmbedElement',
	'HtmlFieldSetElement',
	'HtmlFontElement',
	'HtmlFormElement',
	'HtmlFrameElement',
	'HtmlFrameSetElement',
	'HtmlHeadElement',
	'HtmlHeadingElement',
	'HtmlHrElement',
	'HtmlHtmlElement',
	'HtmlIFrameElement',
	'HtmlImageElement',
	'HtmlInputElement',
	'HtmlLabelElement',
	'HtmlLegendElement',
	'HtmlLiElement',
	'HtmlLinkElement',
	'HtmlMapElement',
	'HtmlMediaElement',
	'HtmlMenuElement',
	'HtmlMenuItemElement',
	'HtmlMetaElement',
	'HtmlMeterElement',
	'HtmlModElement',
	'HtmlOListElement',
	'HtmlObjectElement',
	'HtmlOptGroupElement',
	'HtmlOptionElement',
	'HtmlOutputElement',
	'HtmlParagraphElement',
	'HtmlParamElement',
	'HtmlPictureElement',
	'HtmlPreElement',
	'HtmlProgressElement',
	'HtmlQuoteElement',
	'HtmlScriptElement',
	'HtmlSelectElement',
	'HtmlSlotElement',
	'HtmlSourceElement',
	'HtmlButtonElement',
	'HtmlSpanElement',
	'HtmlStyleElement',
	'HtmlTableCaptionElement',
	'HtmlTableCellElement',
	'HtmlTableColElement',
	'HtmlTableElement',
	'HtmlTableRowElement',
	'HtmlTableSectionElement',
	'HtmlTemplateElement',
	'HtmlTextAreaElement',
	'HtmlTimeElement',
	'HtmlTitleElement',
	'HtmlTrackElement',
	'HtmlUListElement',
	'HtmlVideoElement',
	'MediaStream',
	'FileList',
	'console',
	'Event',
	'KeyboardEvent',
	'UiEvent',
	'DragEvent',
	'PointerEvent',
	'FocusEvent',
	'InputEvent',
	'WheelEvent',
	'AnimationEvent',
	'TransitionEvent',
	'MouseEvent',
	'TouchEvent'
]