[package]
name = "consecuit_counters"
version = "0.1.0"
authors = ["Wisha Wa <wisha.wa@yandex.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.74"
console_error_panic_hook = "0.1.6"
consecuit = { path = "../../" }
consecuit_html = { path = "../../html/" }