[package]
name = "consecuit_todomvc"
version = "0.1.0"
authors = ["Wisha Wa <wisha.wa@yandex.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.74"
console_error_panic_hook = "0.1.6"
consecuit = { path = "../../" }
consecuit_html = { path = "../../html/" }
im-rc = { version = "15.0.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3.51"
features = [
	'Window',
	'Location',
	'Storage'
]